--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "build": "npm run build:client && npm run build:lib"
   },
   "dependencies": {
+    "ali-oss": "^6.17.1",
     "axios": "^0.24.0",
     "co-body": "^6.1.0",
     "express": "^4.17.1",
@@ -51,7 +52,7 @@
     "@vitejs/plugin-vue": "^3.1.2",
     "@wangeditor/editor": "^5.0.1",
     "@wangeditor/editor-for-vue": "^5.1.11",
-    "dotenv": "^16.0.1",
+    "dotenv": "^16.0.3",
     "es-module-lexer": "^0.9.3",
     "eslint": "^8.3.0",
     "eslint-config-google": "^0.14.0",
